Set theme jekyll-theme-tactile

--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ github_username:  github.com/savoga # DO NOT include the @ character, or else th
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: minima
+theme: jekyll-theme-tactile
