--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:            'Just a simple Jekyll theme'
 description:    "On this website you will find maths, machine learning and extra stuff. Enjoy!"
 picture:        'assets/img/profile.png'
 locale:         en_US
-url:            https://savoga.github.io/woody
+url:            https://savoga.github.io
 
 collections:
   stats:
