--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:          Welcome
+title:          Savoga's website
 bio:            'Just a simple Jekyll theme'
 description:    "On this website you will find maths, machine learning and extra stuff. Enjoy!"
 picture:        'assets/img/profile.png'
