--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ collections:
     output: true
   machinelearning:
     output: true
+  projects:
+    output: true
 
 # Jekyll
 permalink:      /:title/
