--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:          Savoga's website
+title:          Savoga
 bio:            'Just a simple Jekyll theme'
-description:    "On this website you will find maths, machine learning and extra stuff. Enjoy!"
+description:    "On this website you will find maths, machine learning and few projects. Enjoy!"
 picture:        'assets/img/profile.png'
 locale:         en_US
 url:            https://savoga.github.io
