--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Savoga
 bio:            'Just a simple Jekyll theme'
 description:    "On this website you will find maths, machine learning and few projects. Enjoy!"
-picture:        'assets/img/profile.png'
+picture:        'assets/img/me.png'
 locale:         en_US
 url:            https://savoga.github.io
 
