--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:          Savoga
 bio:            'Just a simple Jekyll theme'
-description:    "Welcome!"
+description:    'Welcome on my website!'
 picture:        'assets/img/me.png'
 locale:         en_US
 url:            https://savoga.github.io
