add cumulative distribution function

--- a/_data/topic-stats.yml
+++ b/_data/topic-stats.yml
@@ -4,7 +4,7 @@
 - name: Correlation
 - name: Heavy-tailed distribution
 - name: Likelihood method
-- name: Mass and density functions
+- name: Distribution functions
 - name: Spectral theorem
 - name: Time series
 
