--- a/_config.yml
+++ b/_config.yml
@@ -80,3 +80,6 @@ jekyll-mentions:
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
+
+# Google Analytics
+google_analytics: UA-178286273-1
