--- a/_data/topic-ml.yml
+++ b/_data/topic-ml.yml
@@ -1,5 +1,5 @@
 - name: Bayes classifier
-- name: Biais-complexity Trade-off
+- name: Bias-complexity Trade-off
 - name: Gradient descent
 - name: Overfitting & regularization
 
