add hierarchical clustering

--- a/_data/topic-ml.yml
+++ b/_data/topic-ml.yml
@@ -21,6 +21,7 @@
 - name: SMOTE
 - name: Local Outlier Factor
 - name: K-means
+- name: Hierarchical clustering
 - name: DBSCAN
 - name: Expectation-maximization (GMM)
 - name: VAE
